<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/white2"
        android:textSize="48sp"
        android:maxLength="12"
        android:gravity="right|bottom|center_vertical"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/btnSeven"
            android:onClick="onDigit"
            android:backgroundTint="@color/gray"/>
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/btnEight"
            android:onClick="onDigit"
            android:backgroundTint="@color/gray"/>
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/btnNine"
            android:onClick="onDigit"
            android:backgroundTint="@color/gray"/>
        <Button
            android:id="@+id/btnSlash"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/btnSlash"
            android:onClick="onOperator"
            android:backgroundTint="@color/gray"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/btnFour"
            android:onClick="onDigit"
            android:backgroundTint="@color/gray"/>
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/btnFive"
            android:onClick="onDigit"
            android:backgroundTint="@color/gray"/>
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/btnSix"
            android:onClick="onDigit"
            android:backgroundTint="@color/gray"/>
        <Button
            android:id="@+id/btnMutilpline"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/btnMultiply"
            android:onClick="onOperator"
            android:backgroundTint="@color/gray"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/btnOne"
            android:onClick="onDigit"
            android:backgroundTint="@color/gray"/>
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/btnTwo"
            android:onClick="onDigit"
            android:backgroundTint="@color/gray"/>
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/btnThree"
            android:onClick="onDigit"
            android:backgroundTint="@color/gray"/>
        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/btnMinus"
            android:onClick="onOperator"
            android:backgroundTint="@color/gray"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnDecimal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/btnDot"
            android:onClick="onDecimalPoint"
            android:backgroundTint="@color/gray"/>
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/btnZero"
            android:onClick="onDigit"
            android:backgroundTint="@color/gray"/>
        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/btnAllClear"
            android:onClick="onAllClear"
            android:backgroundTint="@color/gray"/>
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="2dp"
            android:text="@string/btnAdd"
            android:onClick="onOperator"
            android:backgroundTint="@color/gray"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
     <Button
         android:id="@+id/btnEqual"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginHorizontal="2dp"
         android:text="@string/btnEqual"
         android:layout_weight="1"
         android:textSize="25sp"
         android:onClick="onEqual"
         android:backgroundTint="@color/gray"
         />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btnCLear"
            android:layout_weight="3"
            android:backgroundTint="@color/gray"
            android:onClick="onClear"/>
    </LinearLayout>
</LinearLayout>